# StormByte-Crypto

./: .gitmodules  CMakeLists.txt  README.md  core
.github/workflows/: build.yml  codeql.yml  doc.yml  jekyll-gh-pages.yml
cmake/: FindCrypto++.cmake  asan.cmake  install.cmake
doc/: CMakeLists.txt
lib/: CMakeLists.txt
lib/private/StormByte/crypto/: random.cxx  random.hxx
lib/private/StormByte/crypto/crypter/asymmetric/: implementation.hxx
lib/private/StormByte/crypto/crypter/symmetric/: implementation.hxx
lib/private/StormByte/crypto/hasher/: implementation.hxx
lib/private/StormByte/crypto/implementation/: typedefs.hxx
lib/private/StormByte/crypto/implementation/compressor/: bzip2.cxx  bzip2.hxx  gzip.cxx  gzip.hxx  typedefs.hxx  zlib.cxx  zlib.hxx
lib/private/StormByte/crypto/implementation/encryption/: aes.cxx  aes.hxx  aes_gcm.cxx  aes_gcm.hxx  camellia.cxx  camellia.hxx  chacha20.cxx  chacha20.hxx  dsa.cxx  dsa.hxx  ecc.cxx  ecc.hxx  ecdh.cxx  ecdh.hxx  ecdsa.cxx  ecdsa.hxx  ed25519.cxx  ed25519.hxx  rsa.cxx  rsa.hxx  serpent.cxx  serpent.hxx  twofish.cxx  twofish.hxx  typedefs.hxx  x25519.cxx  x25519.hxx
lib/private/StormByte/crypto/implementation/hash/: blake2b.cxx  blake2b.hxx  blake2s.cxx  blake2s.hxx  sha256.cxx  sha256.hxx  sha3.cxx  sha3.hxx  sha512.cxx  sha512.hxx  typedefs.h
lib/private/StormByte/crypto/keypair/: implementation.cxx  implementation.hxx
lib/private/StormByte/crypto/secret/: implementation.hxx
lib/private/StormByte/crypto/signer/: implementation.hxx
lib/public/StormByte/crypto/: algorithm.hxx  asymetric.cxx  asymetric.hxx  compressor.cxx  compressor.hxx  crypter.hxx  exception.hxx  hasher.cxx  hasher.hxx  keypair.cxx  keypair.hxx  secret.cxx  secret.hxx  signer.cxx  signer.hxx  symmetric.cxx  symmetric.hxx  typedefs.hxx  visibility.h
lib/public/StormByte/crypto/compressor/: algorithm.hxx  bzip2.cxx  bzip2.hxx  generic.cxx  generic.hxx  gzip.cxx  gzip.hxx  typedefs.hxx  zlib.cxx  zlib.hxx
lib/public/StormByte/crypto/crypter/: generic.cxx  generic.hxx
lib/public/StormByte/crypto/crypter/asymmetric/: ecc.cxx  ecc.hxx  generic.cxx  generic.hxx  rsa.cxx  rsa.hxx
lib/public/StormByte/crypto/crypter/symmetric/: aes.cxx  aes.hxx  aes_gcm.cxx  aes_gcm.hxx  camellia.cxx  camellia.hxx  chachapoly.cxx  chachapoly.hxx  generic.cxx  generic.hxx  serpent.cxx  serpent.hxx  twofish.cxx  twofish.hxx
lib/public/StormByte/crypto/encryption/: aes.cxx  aes.hxx  algorithm.hxx  dsa.cxx  dsa.hxx  ecc.cxx  ecc.hxx  rsa.cxx  rsa.hxx  typedefs.hxx
lib/public/StormByte/crypto/hash/: algorithm.hxx  blake2b.cxx  blake2b.hxx  blake2s.cxx  blake2s.hxx  sha256.cxx  sha256.hxx  sha512.cxx  sha512.hxx  typedefs.h
lib/public/StormByte/crypto/hasher/: blake2b.cxx  blake2b.hxx  blake2s.cxx  blake2s.hxx  generic.cxx  generic.hxx  sha256.cxx  sha256.hxx  sha3_256.cxx  sha3_256.hxx  sha3_512.cxx  sha3_512.hxx  sha512.cxx  sha512.hxx
lib/public/StormByte/crypto/keypair/: dsa.cxx  dsa.hxx  ecc.cxx  ecc.hxx  ecdh.cxx  ecdh.hxx  ecdsa.cxx  ecdsa.hxx  ed25519.cxx  ed25519.hxx  generic.cxx  generic.hxx  rsa.cxx  rsa.hxx  x25519.cxx  x25519.hxx
lib/public/StormByte/crypto/secret/: ecdh.cxx  ecdh.hxx  generic.cxx  generic.hxx  x25519.cxx  x25519.hxx
lib/public/StormByte/crypto/signer/: dsa.cxx  dsa.hxx  ecdsa.cxx  ecdsa.hxx  ed25519.cxx  ed25519.hxx  generic.cxx  generic.hxx  rsa.cxx  rsa.hxx
test/: CMakeLists.txt  aes_test  aes_test.cxx  blake2b_test.cxx  blake2s_test  blake2s_test.cxx  bzip2_test.cxx  camellia_test.cxx  dsa_test.cxx  ecc_test.cxx  ecdh_test  ecdh_test.cxx  ecdsa_test  ecdsa_test.cxx  gzip_test  gzip_test.cxx  helpers.hxx  rsa_test  rsa_test.cxx  sha256_test  sha256_test.cxx  sha512_test  sha512_test.cxx
test/compressor/: CMakeLists.txt  bzip2_test.cxx  zlib_test.cxx
test/compressors/: CMakeLists.txt  zlib_test.cxx
test/crypter/: CMakeLists.txt
test/crypter/asymmetric/: CMakeLists.txt  ecc_test.cxx  rsa_encrypt_test.cxx
test/crypter/symmetric/: CMakeLists.txt  aes_gcm_test.cxx  aes_test.cxx  camellia_test.cxx  chachapoly_test.cxx  serpent_test.cxx  twofish_test.cxx
test/encrypters/asymmetric/: rsa_encrypt_test.cxx
test/encrypters/symmetric/: CMakeLists.txt  aes_gcm_test.cxx  aes_test.cxx  chacha20_test.cxx  serpent_test.cxx  twofish_test.cxx
test/hasher/: blake2b_test.cxx  blake2s_test.cxx  sha256_test.cxx  sha3_test.cxx  sha512_test.cxx
test/hashers/: CMakeLists.txt  blake2b_test.cxx  sha256_test.cxx  sha3_test.cxx
test/keypair/: CMakeLists.txt  keypair_generatesave_test.cxx
test/scripts/: generate-openssl-keypairs.sh
test/secret/: CMakeLists.txt  ecdh_test.cxx  x25519_test.cxx
test/shared_secret_generators/: ecdh_test.cxx  x25519_test.cxx
test/signer/: dsa_test.cxx  ecdsa_test.cxx  ed25519_test.cxx  rsa_sign_test.cxx
test/signers/: CMakeLists.txt  dsa_test.cxx  ed25519_test.cxx  rsa_sign_test.cxx
