option(ENABLE_TEST "Enable Unit Tests" OFF)
if(ENABLE_TEST)
	enable_testing()

	add_library(tests INTERFACE)
	target_include_directories(tests INTERFACE ${CMAKE_CURRENT_LIST_DIR})
	
	add_subdirectory(compressor)
	add_subdirectory(crypter)
	add_subdirectory(hasher)
	add_subdirectory(keypair)
	add_subdirectory(secret)
	add_subdirectory(signer)
endif()